--- a/UserBehaviorPrediction/UserBehaviorAPI/UserBehaviorAPI.csproj
+++ b/UserBehaviorPrediction/UserBehaviorAPI/UserBehaviorAPI.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageReference Include="Microsoft.ML" Version="4.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="4.0.2" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
