--- a/UserBehaviorPrediction/UserBehaviorAPI/UserBehaviorAPI.csproj
+++ b/UserBehaviorPrediction/UserBehaviorAPI/UserBehaviorAPI.csproj
@@ -13,6 +13,10 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <content Include="Data\*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </content>
+    <Folder Include="MLModel\" />
   </ItemGroup>
 
 </Project>
